--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.6.2",
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@postlight/parser": "^2.2.3",
+    "@prisma/client": "^4.15.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.9",
@@ -22,9 +24,7 @@
     "eslint-config-next": "^13.4.4",
     "framer-motion": "^10.12.16",
     "next": "^13.4.4",
-    "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
-    "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.15.0"
   }
 }
