--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
+    "cors": "^2.8.5",
     "eslint": "^8.42.0",
     "eslint-config-next": "^13.4.4",
     "framer-motion": "^10.12.16",
+    "html-react-parser": "^4.0.0",
     "next": "^13.4.4",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
