--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "auth0-js": "^9.21.0",
     "autoprefixer": "^10.4.14",
     "cors": "^2.8.5",
     "eslint": "^8.42.0",
